# dose-3d

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  EPID_12_t0.dcm  EPID_Reconstruction_GUI_Dir.spec  GUI_README.md  analyze_epid_dicom.py  build_epid_gui.py  build_executable.py  build_gui.py  build_pyinstaller.py  build_simple_pyinstaller.py  create-release.ps1  create_portable_app.py  epid_dose_reconstruction.py  epid_gui.spec  epid_reconstruction_gui.py  epid_reconstruction_gui.spec  example_usage.py  filtered_backprojection_reconstruction.py  launch_epid_gui.bat  launch_gui.py  main.py  main.spec  pyproject.toml  setup_freeze.py  setup_minimal.py  test_gui_components.py  test_new_features.py  test_slice_bounds.py  tps_reference_data.py
.claude/: settings.json  settings.local.json
notebooks/: ConeBeam_FDK_3Arc.ipynb  ConeBeam_FDK_backup.ipynb  ConeBeam_FDK_corrected.ipynb  ConeBeam_FDK_corrected2.ipynb  ConeBeam_FDK_corrected3.ipynb  ConeBeam_FDK_optimized.ipynb  ConeBeam_FDK_optimized_v2.ipynb  ConeBeam_FDK_orient.ipynb  ConeBeam_FDK_orient_LLM.ipynb  ConeBeam_FDK_original.ipynb  ConeBeam_FDK_original_nof.ipynb  ConeBeam_FDK_step.ipynb  ConeBeam_FDK_step2.ipynb  ConeBeam_FDK_step3.ipynb  ConeBeam_FDK_step_numba.ipynb  EPID_ASTRA_Reconstruction.ipynb  EPID_Dose_Reconstruction_3D.ipynb  EPID_F10x10_P10X10.csv  EPID_F10x10_P5X5.csv  EPID_F5x5_P10X10.csv  EPID_F5x5_P5X5.csv  Quick_EPID_Dose_Verification.ipynb  Quick_EPID_Verification_Clean.ipynb  adding_twovmat.ipynb  cb_cuda.ipynb  dcm_save.ipynb  dose_check.ipynb  dose_recon.ipynb  (+16 more)
(+25 files in other folders)
