[project]
name = "dose-3d"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numba>=0.66.0",
    "opencv-python>=5.0.0.93",
    "pydicom>=3.0.2",
    "pyinstaller>=6.21.0",
    "pyside6>=6.11.1",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "tqdm>=4.68.4",
]
